--- a/react/fullStackMERNServerForHanist/package.json
+++ b/react/fullStackMERNServerForHanist/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "mongoose": "^5.13.5"
+    "mongoose": "^5.13.5",
+    "socket.io": "^4.1.3"
   }
 }
